--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 # Use Ubuntu 22.04 as the base image
-FROM ubuntu:22.04
+FROM ubuntu:22.04 as base
 
 # Arguments for build
 ARG USERNAME=$USERNAME
@@ -37,8 +37,9 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
 RUN sudo chsh -s $(which zsh) $USERNAME
 # Activate oh-my-zsh plugins
 RUN sed -i 's/plugins=(git)/plugins=(git per-directory-history z)/g' ~/.zshrc
-# Link the per-directory-history plugin to /workspace/RapidDevEnv/.devcontainer/persistent/.directiory_history
-RUN ln -s /workspaces/RapidDevEnv/.devcontainer/persistent/.directory_history ~/.directory_history
+# Link the per-directory-history plugin to /workspace/$PROJECT_NAME/.devcontainer/persistent/.directory_history
+ARG PROJECT_NAME=$PROJECT_NAME
+RUN ln -s /workspaces/$PROJECT_NAME/.devcontainer/persistent/.directory_history ~/.directory_history
 # Change the default theme
 RUN sed -i 's/ZSH_THEME="robbyrussell"/ZSH_THEME="bira"/g' ~/.zshrc
 # Install zsh-completions
@@ -50,3 +51,16 @@ RUN sh -c ". /etc/environment && ~/.fzf/install"
 
 # Remove the non-interactive mode
 ARG DEBIAN_FRONTEND=
+
+
+FROM base as cuda
+# Install CUDA Toolkit 12.1.1
+RUN sudo apt-get update && \
+    sudo apt-get install -y \
+        gnupg \
+        wget \
+        && \
+    sudo rm -rf /var/lib/apt/lists/*
+
+# Create a txt file in home directory
+RUN touch ~/cuda_ubuntu2204.txt
