Change container name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "RapidDevEnv",
+  "name": "RapidDevEnv-container",
   "build": {
     "dockerfile": "Dockerfile",
     "args": {
@@ -12,6 +12,6 @@
   "remoteUser": "vscode",
   "runArgs": [
     "--gpus=all",
-    "--hostname=RapidDevEnv@host"
+    "--hostname=RapidDevEnv-container@host"
   ]
 }
